continuando con estilos

--- a/styles.css
+++ b/styles.css
@@ -460,7 +460,7 @@ body {
 
 /* Sección Servicios */
 .servicios-section {
-    max-width: 1100px;
+    /*max-width: 1100px;*/
     margin: 3rem auto 2rem auto;
     padding: 2rem 1rem;
     background: #fff;
@@ -487,7 +487,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    /*align-items: flex-start;*/
     min-height: 140px;
     box-sizing: border-box;
 }
@@ -495,11 +495,11 @@ body {
     background-color: #0056b3;
 }*/
 
-.servicioA{
-    text-align: right;
-}
 .servicioB{
-    text-align: left;
+    text-align: left !important;
+}
+.servicioA{
+    text-align: right !important;
 }
 
 .servicio-text h3 {
@@ -513,11 +513,19 @@ body {
     font-size: 1rem;
     margin: 0;
 }
+.imgA{
+    align-items: baseline;
+}
+.imgB{
+    align-items: end;
+}
+
 .servicio-img {
     padding: 0.5rem;
+    height: 50%;
     /*background: #bdbdbd;*/
     display: flex;
-    align-items: center;
+    /*align-items: center;*/
     justify-content: center;
 }
 .servicio-img img {
@@ -591,7 +599,7 @@ body {
     position: relative;
 }
 .objetivo-box {
-    background: #bdbdbd;
+    /*background: #bdbdbd;*/
     border-radius: 10px;
     padding: 2rem 2.2rem;
     min-width: 220px;
@@ -639,6 +647,12 @@ body {
     right: -120px;
     top: 40px;
 }
+
+
+.mision{
+    text-align: left;
+}
+
 @media (max-width: 900px) {
     .objetivo-container {
         flex-direction: column;
@@ -1019,8 +1033,8 @@ body {
     flex: 1 1 0;
     max-width: 100%;
     border-radius: 0 0 10px 10px;
-    text-align: left;
-    background: #bdbdbd;
+    /*text-align: left;*/
+    /*background: #bdbdbd;*/
     padding: 2rem 2.2rem;
     box-shadow: 0 2px 8px rgba(0,0,0,0.03);
 }
