--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(6, 42, 161, 0.603);
+    background-color: rgba(0, 33, 143, 0.555);
     z-index: 1;
 }
 
@@ -248,11 +248,12 @@ body {
     z-index: 2;
     text-align: center;
     color: white;
+    margin-bottom: 2rem;
 }
 
 .hero-logo {
     width: 200px;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 .hero h1 {
@@ -283,13 +284,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 3rem;
-    max-width: 1000px;
-    margin: 3rem auto;
+    gap: 2.0rem;
+    /*max-width: 1000px;*/
+    margin: 4rem 2.5rem;
     padding: 2rem 1rem;
     background: #fff;
-    border-radius: 12px;
-    box-shadow: 0 2px 12px rgba(0,0,0,0.04);
+    /*border-radius: 12px;*/
+    /*box-shadow: 0 2px 12px rgba(0,0,0,0.04);*/
     font-family: 'Arial', sans-serif;
 }
 
@@ -299,22 +300,24 @@ body {
 }
 
 .about-text h2 {
-    font-size: 2rem;
-    margin-bottom: 0.5rem;
+    font-size: 2.2rem;
+    margin-bottom: 2rem;
     font-weight: 700;
     color: #22479D;
 }
 
 .about-subtitle {
-    font-size: 1.1rem;
-    color: #333;
+    font-size: 1.5rem;
+    /*color: #333;*/
+    color: #000000;
     margin-bottom: 1rem;
     font-weight: 500;
 }
 
 .about-text p {
-    font-size: 1rem;
-    color: #444;
+    font-size: 1.3rem;
+    /*color: #444;*/
+    color: #000000;
     line-height: 1.6;
 }
 
@@ -326,10 +329,11 @@ body {
 }
 
 .about-image img {
-    max-width: 320px;
+    /*max-width: 320px;*/
     width: 100%;
     height: auto;
-    border-radius: 8px;
+    border-top-left-radius: 100px;
+    border-bottom-right-radius: 100px;
     background: #ccc;
     object-fit: cover;
 }
