--- a/styles.css
+++ b/styles.css
@@ -464,10 +464,10 @@ body {
 
 /* Sección Servicios */
 .servicios-section {
-    max-width: 1200px;
+    /*max-width: 1200px;*/
     margin: 3rem auto 2rem auto;
-    padding: 1rem 2rem;
-    background: #fff;
+    /*padding: 1rem 2rem;*/
+    /*background: #004482;*/
     border-radius: 12px;
     font-family: 'Arial', sans-serif;
     text-align: center;
@@ -491,12 +491,15 @@ body {
     flex-direction: column;
     /*gap: 1.5rem;*/
     /*padding: 2rem;*/
-    background: #f8f9fa;
-    border-radius: 12px;
+    background: #0b6cd3;
+    /*border-radius: 12px;*/
+    
 }
 
 .servicioA{
     text-align: right;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
 .servicioB{
     text-align: left;
@@ -504,19 +507,18 @@ body {
 
 .servicio-text {
     padding: 3rem 1rem;
-    
-    margin-bottom: 20px;
+  
 }
 
 .servicio-text h3 {
     font-size: 1.4rem;
-    color: #22479D;
+    color:#ffffff;
     margin-bottom: 1rem;
     font-weight: 700;
 }
 
 .servicio-text p {
-    color: #333;
+    color: #fff;
     font-size: 1.1rem;
     line-height: 1.6;
 }
@@ -525,14 +527,13 @@ body {
     width: 100%;
     height: 250px;
     overflow: hidden;
-    border-radius: 8px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
 }
 
 .servicio-img img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    margin-bottom: 20px;
 }
 
 
