--- a/styles.css
+++ b/styles.css
@@ -609,12 +609,12 @@ body {
 
 /* Sección Nuestro Objetivo */
 .objetivo-section {
-    max-width: 1100px;
+    /*max-width: 1100px;*/
     margin: 4rem auto 2rem auto;
     padding: 2rem 1rem;
     background: #fff;
     border-radius: 12px;
-    box-shadow: 0 2px 12px rgba(0,0,0,0.04);
+    /*box-shadow: 0 2px 12px rgba(0,0,0,0.04);*/
     font-family: 'Arial', sans-serif;
     text-align: center;
 }
@@ -642,13 +642,14 @@ body {
 }
 .objetivo-box h3 {
     color: #22479D;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     margin-bottom: 0.7rem;
     font-weight: 700;
+    text-align: center;
 }
 .objetivo-box p {
     color: #222;
-    font-size: 1rem;
+    font-size: 1.3rem;
     margin: 0;
 }
 .objetivo-center {
@@ -684,6 +685,7 @@ body {
 
 .mision{
     text-align: left;
+    
 }
 
 @media (max-width: 900px) {
@@ -1056,26 +1058,20 @@ body {
 }
 
 .objetivo-dos-columnas {
-    display: flex;
-    align-items: stretch;
+    display: block;
+    /*align-items: stretch;*/
     justify-content: center;
-    gap: 0;
-    position: relative;
+    gap: 1.0rem;
+    /*position: relative;*/
 }
 .objetivo-dos-columnas .objetivo-box {
-    flex: 1 1 0;
+    /*flex: 1 1 0;*/
     max-width: 100%;
-    border-radius: 0 0 10px 10px;
     /*text-align: left;*/
     /*background: #bdbdbd;*/
     padding: 2rem 2.2rem;
+    background-color: #004482;
     box-shadow: 0 2px 8px rgba(0,0,0,0.03);
-}
-.objetivo-divisor {
-    width: 2px;
-    background: #22479D;
-    margin: 0 0.5rem;
-    border-radius: 2px;
 }
 @media (max-width: 900px) {
     .objetivo-dos-columnas {
